--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,19 @@
-all: main.o mandelbrot.o
-	g++ main.o mandelbrot.o -o mandelbrot_explorer -ltbb -lrt `pkg-config --cflags --libs opencv`
+CC = g++
+CCFLAGS = -fopenmp -march=native -O2
+LDFLAGS = `pkg-config --cflags --libs opencv`
+INC = -I /usr/include/eigen3
+LIB = -ltbb -lrt
 
-main.o: main.cpp mandelbrot.h applyIter.h Eigen2CV.h
-	g++ -I /usr/include/eigen3 -fopenmp -march=native -O2 -c main.cpp -o main.o `pkg-config --cflags --libs opencv`
+
+
+all: main.o mandelbrot.o
+	$(CC) main.o mandelbrot.o -o mandelbrot_explorer $(LIB) $(LDFLAGS)
+
+main.o: main.cpp mandelbrot.h
+	$(CC) $(CCFLAGS) $(INC) -c main.cpp -o main.o 
 
 mandelbrot.o: mandelbrot.cpp mandelbrot.h applyIter.h Eigen2CV.h
-	g++ -I /usr/include/eigen3 -fopenmp -march=native -O2 -c mandelbrot.cpp -o mandelbrot.o `pkg-config --cflags --libs opencv`
+	$(CC) $(CCFLAGS) $(INC) -c mandelbrot.cpp -o mandelbrot.o 
+
+clean:
+	rm -rf *.o mandelbrot_explorer
