--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CC = g++
-CCFLAGS = -fopenmp -march=native -msse2 -O2
-LDFLAGS = `pkg-config --cflags --libs opencv`
+CCFLAGS = -fopenmp -march=native -msse2 -pthread -O2
+LDFLAGS = `pkg-config --cflags --libs opencv4`
 INC = -I /usr/include/eigen3
 LIB = -ltbb -lrt
 
@@ -10,10 +10,10 @@ all: main.o mandelbrot.o
 	$(CC) main.o mandelbrot.o -o mandelbrot_explorer $(LIB) $(LDFLAGS)
 
 main.o: main.cpp mandelbrot.h
-	$(CC) $(CCFLAGS) $(INC) -c main.cpp -o main.o 
+	$(CC) $(CCFLAGS) $(INC) -c main.cpp -o main.o $(LDFLAGS) 
 
 mandelbrot.o: mandelbrot.cpp mandelbrot.h applyIter.h Eigen2CV.h
-	$(CC) $(CCFLAGS) $(INC) -c mandelbrot.cpp -o mandelbrot.o 
+	$(CC) $(CCFLAGS) $(INC) -c mandelbrot.cpp -o mandelbrot.o $(LDFLAGS)
 
 clean:
 	rm -rf *.o mandelbrot_explorer
