--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.13)
 project(mandelbrot_explorer)
 
 SET(GCC_COVERAGE_COMPILE_FLAGS "-fopenmp -march=native -msse2 -O2 -std=c++11")
-SET(GCC_COVERAGE_LINK_FLAGS    "-ltbb -lrt")
+SET(GCC_COVERAGE_LINK_FLAGS    "-ltbb")
 SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS}${GCC_COVERAGE_LINK_FLAGS}")
 
