--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(mandelbrot_explorer LANGUAGES CXX CUDA)
 
 #target_compile_features(mandelbrot_explorer PUBLIC cxx_std_11)
 
-SET(GCC_COVERAGE_COMPILE_FLAGS "-std=c++11")
+SET(GCC_COVERAGE_COMPILE_FLAGS "-O2 -std=c++11")
 SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS}${GCC_COVERAGE_LINK_FLAGS}")
 
