more minor changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,6 @@
         "typeinfo": "cpp",
         "bit": "cpp",
         "__nullptr": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
