cleaned up includes/removed opencv
replaced opencv with lightweight lodepng

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,15 @@ cmake_minimum_required(VERSION 3.13)
 
 project(mandelbrot_explorer LANGUAGES CXX CUDA)
 
-find_package( OpenCV )
-
-include_directories(include ${OpenCV_INCLUDE_DIRS})
+include_directories(include "./extern")
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 
 add_subdirectory("./extern/glfw")
+
+add_library(lodepng STATIC "./extern/lodepng-master/lodepng.cpp")
 
 add_library(glad STATIC "src/glad.cpp")
 
@@ -23,8 +23,8 @@ add_executable(mandelbrot_explorer "src/main.cpp")
 set_property(TARGET mandelbrot_explorer PROPERTY CUDA_STANDARD 11)
 target_link_libraries( mandelbrot_explorer PUBLIC glad	
 					     PUBLIC mandelbrot
-					     PUBLIC Shader
 					     PUBLIC glfw
-						 PUBLIC ${OpenCV_LIBS} 
+					     PUBLIC Shader
+						 PUBLIC lodepng
 					     )
 
